--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.1.0",
+    "angularfire2": "^4.0.0-rc.1",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "firebase": "^4.2.0",
+    "firebase-tools": "^4.2.0",
+    "g": "^2.0.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
